--- a/styles/contacts.css
+++ b/styles/contacts.css
@@ -28,7 +28,7 @@ main {
     background-color: #2A3647;
     padding: 12px 0;
     text-align: center;
-    font-size: 18px;
+    font-size: 21px;
     font-weight: 600;
     border-radius: 10px;
     cursor: pointer;
@@ -40,8 +40,8 @@ main {
 }
 
 .add-contact-btn img {
-    width: 22px;
-    height: 22px;
+    width: 32px;
+    height: 32px;
     margin-left: 8px;
 }
 
@@ -79,7 +79,7 @@ main {
     font-size: 20px;
     font-weight: 400;
     color: #2A3647;
-    margin: 0 0 8px 0;
+    margin: 12px 0;
     padding-left: 24px;
     letter-spacing: 2px;
 }
@@ -221,7 +221,7 @@ main {
     align-items: flex-start;
     gap: 2px;
     padding: 12px 24px;
-    margin: 12px 0;
+    margin-top: 12px;
 }
 
 .contact-name-wrapper {
@@ -243,6 +243,7 @@ main {
     justify-content: center;
     margin-right: 0;
     /* Hintergrundfarbe wird per JS-Klasse gesetzt */
+    border: 1px solid #fff; /* weißer Rand hinzugefügt */
 }
 
 /* Beispielhafte Farben für Initialen-Kreise */
@@ -365,6 +366,7 @@ main {
 
 hr {
     color: #d1d1d1d2;
+    width: 352px;
 }
 
 .contact-initials-large {
@@ -379,6 +381,7 @@ hr {
     font-size: 47px;
     color: #fff;
     margin-right: 16px;
+    border: 3px solid #fff; /* weißer Rand hinzugefügt */
 }
 
 .contact-header-large {
