--- a/styles/contacts.css
+++ b/styles/contacts.css
@@ -443,7 +443,7 @@ hr {
     cursor: pointer;
     padding: 0 8px;
     height: 24px;
-    min-width: auto;
+    min-width: 77px;
     outline: none;
     box-sizing: border-box;
     transition: all 0.2s;
