edit dialog: initials added

--- a/styles/contacts.css
+++ b/styles/contacts.css
@@ -14,7 +14,7 @@ main {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    width: 456px;
+    width: 420px;
     margin-left: 16px;
     margin-top: 24px;
 }
@@ -349,7 +349,7 @@ main {
     overflow-y: auto;
     overflow-x: hidden;
     /* Verhindert horizontales Überlaufen */
-    width: 432px !important;
+    width: 400px !important;
     /* min-width: 456px; */
     /* max-width: 456px; */
 }
@@ -627,7 +627,7 @@ hr {
 
 .ac__formwrap {
     flex: 1;
-    background: #fff;
+    background: rgb(246, 247, 248);
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -667,6 +667,7 @@ hr {
     display: flex;
     align-items: center;
     background: #fff;
+    background-color: rgb(246, 247, 248);
     border-radius: 8px;
     border: 1px solid #D1D1D1;
     margin-bottom: 0;
@@ -720,7 +721,7 @@ hr {
 }
 
 .btn--ghost {
-    background: #fff;
+    background: rgb(246, 247, 248);
     color: #2A3647;
     border: 1.5px solid #2A3647;
     transition: border-color 0.2s, color 0.2s;
