--- a/styles/addTask.css
+++ b/styles/addTask.css
@@ -180,7 +180,7 @@ textarea {
   cursor: pointer;
   border-radius: 6px;
   position: relative;
-  width: 250px;
+  width: 320px;
   background: white;
 }
 
@@ -190,7 +190,7 @@ textarea {
   top: 100%;
   left: 0;
   width: 100%;
-  max-height: 200px;
+  max-height: 150px;
   overflow-y: auto;
   border: 1px solid #ccc;
   background: #fff;
@@ -207,7 +207,8 @@ textarea {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 6px;
+  gap: 12px;
+  padding: 6px 10px;
 }
 
 .dropdown-item input {
@@ -217,6 +218,26 @@ textarea {
 .dropdown-item input,
 .dropdown-item span {
   pointer-events: auto;
+}
+
+.dropdown-avatar {
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  background-color: #2A3647; /* oder deine Kontaktfarbe */
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 14px;
+  font-weight: 500;
+  flex-shrink: 0;
+}
+
+.dropdown-name {
+  flex: 1;
+  text-align: left;
+  cursor: pointer;
 }
 
 .avatar-container {
