--- a/styles/summary.css
+++ b/styles/summary.css
@@ -7,6 +7,9 @@ body {
     height: 100%;
     margin: 0;
     background-color: #F6F7F8;
+}
+
+body {
     display: flex;
     flex-direction: row;
     align-items: stretch;
@@ -17,7 +20,7 @@ main {
     flex-direction: column;
     align-items: stretch;
     flex: 1 1 auto;
-    gap: 100px;
+    gap: 75px;
 }
 
 .wrapper {
