--- a/styles/login.css
+++ b/styles/login.css
@@ -1,13 +1,13 @@
 * {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-  font-family: 'Arial', sans-serif;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-family: 'Arial', sans-serif;
 }
 
 body {
-  background-color: #f4f4f4;
-  color: #333;
+    background-color: #f4f4f4;
+    color: #333;
 }
 
 .header {
@@ -71,6 +71,10 @@ body {
     height: 48px;
     border: 1px solid #2A3647;
     border-radius: 8px;
+}
+
+button {
+    cursor: pointer;
 }
 
 .login {
