--- a/styles/login.css
+++ b/styles/login.css
@@ -5,6 +5,10 @@
     font-family: 'Arial', sans-serif;
 }
 
+input {
+    border: unset;
+}
+
 body {
     background-color: #f4f4f4;
     color: #333;
@@ -75,6 +79,8 @@ body {
 
 button {
     cursor: pointer;
+    border: unset;
+
 }
 
 .login {
