--- a/styles/signup.css
+++ b/styles/signup.css
@@ -5,6 +5,15 @@
     font-family: 'Arial', sans-serif;
 }
 
+button {
+    cursor: pointer;
+    border: unset;
+}
+
+input {
+    border: unset;
+}
+
 html,
 body {
     background-color: #f4f4f4;
@@ -58,6 +67,7 @@ main {
     width: 91px;
     height: 39px;
     border-radius: 8px;
+    cursor: pointer;
 }
 
 .content {
@@ -90,6 +100,7 @@ main {
     height: 48px;
     border: 1px solid #2A3647;
     border-radius: 8px;
+    cursor: pointer;
 }
 
 .login {
@@ -218,8 +229,4 @@ input.input-focus:focus {
 .sign-up-footer a {
     text-decoration: none;
     color: grey;
-}
-
-button {
-    cursor: pointer;
 }
