--- a/styles/login.css
+++ b/styles/login.css
@@ -168,3 +168,11 @@ button {
     border: 1px solid rgba(255, 61, 0, 0.3);
     width: 100%;
 }
+
+.login-input input.input-error {
+    border: 1px solid #ff3d00 !important;
+}
+
+.login-input input.input-error:focus {
+    border-color: #ff3d00 !important;
+}
