--- a/styles/login.css
+++ b/styles/login.css
@@ -52,6 +52,10 @@ body {
     border-radius: 8px;
 }
 
+.btn-signup:hover {
+    background-color: #29ABE2;
+}
+
 .content {
     width: 100%;
     height: 500px;
@@ -67,6 +71,11 @@ body {
     height: 48px;
     border-radius: 8px;
     gap: 10px;
+}
+
+.btn-login:hover {
+    cursor: pointer;
+    background-color: #29ABE2;
 }
 
 .btn-guestlogin {
