--- a/styles/login.css
+++ b/styles/login.css
@@ -54,6 +54,8 @@ body {
 
 .btn-signup:hover {
     background-color: #29ABE2;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+
 }
 
 .content {
@@ -76,6 +78,7 @@ body {
 .btn-login:hover {
     cursor: pointer;
     background-color: #29ABE2;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
 
 .btn-guestlogin {
@@ -84,6 +87,12 @@ body {
     height: 48px;
     border: 1px solid #2A3647;
     border-radius: 8px;
+}
+
+.btn-guestlogin:hover {
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    color: #29ABE2;
+    border: 1px solid #29ABE2;
 }
 
 button {
