--- a/styles/login.css
+++ b/styles/login.css
@@ -227,11 +227,12 @@ button {
 
 .login-error-container {
     width: 422px;
-    min-height: 56px;
+    min-height: 80px;
     margin-top: 16px;
     display: flex;
     justify-content: center;
     align-items: center;
+
 }
 
 .login-error {
@@ -266,6 +267,11 @@ button {
     width: 24px;
     height: 24px;
 }
+
+.input-placeholder::placeholder {
+    font-size: 16px;
+}
+
 
 footer {
     margin-top: 50px;
