--- a/styles/signup.css
+++ b/styles/signup.css
@@ -24,6 +24,10 @@ body {
     margin: 0;
 }
 
+html {
+    height: 100vh;
+}
+
 
 .header {
     width: 100%;
@@ -72,7 +76,6 @@ main {
 
 .content {
     width: 100%;
-    height: 500px;
     display: flex;
     justify-content: center;
 }
@@ -230,4 +233,27 @@ input.input-focus:focus {
 .sign-up-footer a {
     text-decoration: none;
     color: grey;
+}
+
+footer {
+    margin-top: 50px;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    gap: 16px;
+}
+
+footer a {
+    color: #a8a8a8;
+    text-decoration: none;
+    min-width: 120px;
+}
+
+footer a:hover {
+    color: #29ABE2;
+    font-weight: bold;
+}
+
+.checkbox-text {
+    color: #a8a8a8;
 }
