Align start animation with join logo

--- a/styles/login.css
+++ b/styles/login.css
@@ -50,7 +50,10 @@ body {
     100% {
         width: 100px;
         height: 122px;
-        transform: translate(calc(-50vw + 100px), calc(-50vh + 106px));
+        transform: translate(
+            var(--logo-dx, calc(-50vw + 100px)),
+            var(--logo-dy, calc(-50vh + 106px))
+        );
     }
 }
 
