--- a/styles/signup.css
+++ b/styles/signup.css
@@ -65,15 +65,6 @@ main {
     align-items: center;
 }
 
-.btn-signup {
-    color: white;
-    background-color: #2A3647;
-    width: 91px;
-    height: 39px;
-    border-radius: 8px;
-    cursor: pointer;
-}
-
 .content {
     width: 100%;
     display: flex;
@@ -87,7 +78,7 @@ main {
     color: black;
 }
 
-.btn-login {
+.btn-signup {
     color: white;
     background-color: #2A3647;
     width: 110px;
@@ -95,6 +86,9 @@ main {
     border-radius: 8px;
     gap: 10px;
     cursor: pointer;
+    font-size: 20px;
+    font-weight: bold;
+
 }
 
 .btn-guestlogin {
@@ -216,7 +210,7 @@ input.input-focus:focus {
     width: 322px;
     height: 48px;
     gap: 35px;
-    margin-top: 30px;
+    margin-top: 8px;
 }
 
 .sign-up-footer {
