--- a/styles/signup.css
+++ b/styles/signup.css
@@ -92,6 +92,11 @@ main {
     font-weight: bold;
 }
 
+.btn-signup:hover {
+    background-color: #29ABE2;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+
 .btn-guestlogin {
     background-color: white;
     width: 177px;
@@ -256,7 +261,7 @@ input.input-error:focus {
     width: 322px;
     height: 48px;
     gap: 35px;
-    margin-top: 16px;
+    margin-top: 8px;
 }
 
 .sign-up-footer {
