--- a/styles/board.css
+++ b/styles/board.css
@@ -218,19 +218,11 @@ h1 {
 }
 
 .subtask-card {
+    width: 150px;
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-between;
     align-items: center;
     margin-bottom: 10px;
-
-}
-
-.subtask-progress {
-    height: 8px;
-    width: 120px;
-    background-color: rgb(209, 209, 209);
-    margin-right: 24px;
-    border-radius: 8px;
 
 }
 
@@ -500,6 +492,34 @@ h1 {
   content: "•";
   margin-right: 14px;
   color: black;
+}
+
+.subtask-progress-bar {
+  width: 100px;
+  height: 8px;
+  background: #e5e7eb;
+  border-radius: 8px;
+  overflow: hidden;
+}
+
+.subtask-progress-fill {
+  height: 100%;
+  background: #4ade80;
+  transition: width 0.3s ease;
+}
+
+.modal-subtask {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  margin: 6px 0;
+}
+
+.modal-progress-wrapper {
+    width: 150px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 /* ===========================================
