--- a/styles/signup.css
+++ b/styles/signup.css
@@ -97,6 +97,12 @@ main {
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
 
+.btn-signup:disabled {
+    background-color: #bfc5cf;
+    cursor: default;
+    box-shadow: none;
+}
+
 .btn-guestlogin {
     background-color: white;
     width: 177px;
