--- a/styles/login.css
+++ b/styles/login.css
@@ -198,7 +198,6 @@ button {
     flex-direction: column;
     align-items: center;
     width: 422px;
-    height: 152px;
     margin-top: 10px;
 }
 
@@ -230,24 +229,24 @@ button {
 
 .login-error-container {
     width: 422px;
-    min-height: 80px;
-    margin-top: 16px;
+    min-height: 24px;
+    margin-bottom: 16px;
     display: flex;
     justify-content: center;
     align-items: center;
-
 }
 
 .login-error {
     color: #ff3d00;
-    font-size: 16px;
+    font-size: 13px;
     font-weight: 500;
     text-align: center;
-    padding: 12px;
-    background-color: rgba(255, 61, 0, 0.1);
-    border-radius: 8px;
-    border: 1px solid rgba(255, 61, 0, 0.3);
+    /* padding: 6px 8px; */
+    background-color: transparent;
+    border-radius: 4px;
+    border: none;
     width: 100%;
+    text-align: left;
 }
 
 .login-input input.input-error {
