--- a/styles/header.css
+++ b/styles/header.css
@@ -6,6 +6,7 @@ header {
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     z-index: 5;
     padding: 32px;
+    background-color: white;
 }
 
 .center {
