--- a/styles/board.css
+++ b/styles/board.css
@@ -81,6 +81,7 @@ body {
 }
 
 .board-search input {
+    height: 20px !important;
     border: none;
     outline: none;
     font-size: 16px;
@@ -715,6 +716,35 @@ h1 {
   padding: 10px 18px;
   border-radius: 8px;
 }
+
+.addTask-dialog-bg {
+    background-color: rgba(0, 0, 0, 0.2);
+    height: 100vh;
+    width: 100vw;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 999;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.addTask-dialog {
+    background-color: white;
+    width: 1200px;
+    height: 600px;
+    border: 1px solid white;
+    border-radius: 10px;
+    padding: 36px;
+}
+
+.d-none {
+    display: none;
+}
+
 
 
 /* Responsive */
