--- a/styles/addTask.css
+++ b/styles/addTask.css
@@ -264,6 +264,12 @@ textarea {
   font-weight: bold;
 }
 
+.category {
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
+}
+
 
 
 /* Subtasks */
@@ -281,7 +287,7 @@ textarea {
 }
 
 .subtask-list {
-  height: 150px;
+  height: 130px;
   overflow-y: auto;
 }
 
