--- a/styles/modal.css
+++ b/styles/modal.css
@@ -67,7 +67,13 @@ h1 {
   gap: 16px;
 }
 
-label {
+.form-left label {
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
+}
+
+.category {
   display: flex;
   flex-direction: column;
   gap: 6px;
@@ -281,7 +287,7 @@ textarea {
 }
 
 .subtask-list {
-  height: 130px;
+  height: 100px;
   overflow-y: auto;
 }
 
