--- a/styles/addTask.css
+++ b/styles/addTask.css
@@ -42,17 +42,6 @@ body {
   display: none;
 }
 
-.avatar {
-  width: 36px;
-  height: 36px;
-  border-radius: 50%;
-  background: #e0e0e0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-weight: bold;
-}
-
 /* Content */
 .content {
   padding: 24px 40px;
@@ -261,10 +250,10 @@ textarea {
 }
 
 .avatar {
-  width: 32px;
-  height: 32px;
+  width: 36px;
+  height: 36px;
   border-radius: 50%;
-  background: #03e3f8;
+  background-color: #03e3f8;
   color: white;
   display: flex;
   align-items: center;
